--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pavlovjs",
-  "version": "2.0.3",
+  "version": "3.0.0",
   "description": "Reinforcement learning using Markov Decision Processes",
   "main": "./lib/Pavlov.js",
   "scripts": {
@@ -20,13 +20,5 @@
   "bugs": {
     "url": "https://github.com/NathanEpstein/Pavlov.js/issues"
   },
-  "homepage": "https://github.com/NathanEpstein/Pavlov.js",
-  "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.13.0"
-  }
+  "homepage": "https://github.com/NathanEpstein/Pavlov.js"
 }
